# B12

B12c/: B12Config.cmake.in  CMakeLists.txt  KnownIssues.txt  UserSettings.txt  install.sh
B12c/doc/: B12_doc.aux  B12_doc.bbl  B12_doc.blg  B12_doc.dvi  B12_doc.tex  papers.bib
B12c/doc/pics/: point_iterator.tikz
B12c/src/include/: BitPattern.h  BitPattern.hpp  Box.h  Box.hpp  CooMatrix.h  CooMatrix.hpp  ExtendedUInt64_t.h  ExtendedUInt64_t.hpp  Flags.h  Flags.hpp  Functors.h  Functors.hpp  Grids.h  Grids.hpp  ImplicitBoxTree.h  ImplicitBoxTree.hpp  MapTools.h  MapTools.hpp  Map_Chua.h  Map_Dahlquist.h  Map_Duffing.h  Map_Henon.h  Map_HookesLaw.h  Map_Identity.h  Map_Ikeda.h  Map_Lorenz.h  Map_Moussa.h  Map_Standard.h  Map_StandardBO.h  Map_StandardBO2.h  Map_StandardOpen.h  Map_TDuffing.h  Map_VanDerPol.h  Maps.h  ThrustSystem.h  ThrustSystem.hpp  TypeDefinitions.h  TypeDefinitions.hpp  coordinateFunctions.h  coordinateFunctions.hpp  (+7 more)
B12c/src/matlab/: GridFunctor.m  MapFunctor.m  chainRecurrentSet.m  class_handle.hpp  continuation.m  fixedBoxes.m  generalImplicitBoxTree.m.in  general_implicit_box_tree_interface_mex.hpp.in  grid_functor_interface_mex.cu  map_functor_interface_mex.cu  preprocessor_combinations.h  preprocessor_definitions.h  readForGaio.m  subdivision.m  subdivisionByNim.m
